[package]
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
build = "build.rs"
description = "FFI bindings for libhitaki library"
license = "MIT"
links = "hitaki"
name = "hitaki-sys"
repository = "https://github.com/alsa-project/hitaki-rs/"
version = "0.1.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.hitaki]
name = "hitaki"
version = "0.0"

[package.metadata.system-deps.hitaki.feature-versions]

[lib]
name = "hitaki_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "1.3"

[dependencies]
libc = "0.2"

[dependencies.glib_sys]
package = "glib-sys"
version = "0.10"

[dependencies.gobject_sys]
package = "gobject-sys"
version = "0.10"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
dox = []
