[package]
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
build = "build.rs"
description = "FFI bindings for libhitaki library"
edition = "2018"
license = "MIT"
links = "hitaki"
name = "hitaki-sys"
repository = "https://github.com/alsa-project/hitaki-rs/"
version = "0.1.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.hitaki]
name = "hitaki"
version = "0.1"

[lib]
name = "hitaki_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
