[package]
edition = "2018"
name = "hitaki"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
description = "API bindings for libhitaki library"
license = "MIT"
repository = "https://github.com/alsa-project/hitaki-rs/"

[lib]
name = "hitaki"

[dependencies]
libc = "0.2"
glib = "0.15"
ffi = { package = "hitaki-sys", path = "../hitaki-sys", version = "0.1" }

[dev-dependencies]
gir-format-check = "^0.1"
once_cell = "1.5"
