[package]
edition = "2018"
name = "hitaki"
version = "0.0.91"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API bindings for hitaki library"
documentation = "https://docs.rs/hitaki/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "alsa", "glib"]
license = "MIT"
repository = "https://github.com/alsa-project/hitaki-rs/"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "hitaki"

[dependencies]
libc = "0.2"
glib = "0.15"
ffi = { package = "hitaki-sys", path = "../hitaki-sys", version = "0.0.91" }

[dev-dependencies]
gir-format-check = "^0.1"
once_cell = "1.5"

[features]
# To suppress linking to C library when generating documentation.
dox = ["ffi/dox", "glib/dox"]
