[package]
edition = "2021"
name = "hitaki"
version = "0.5.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API bindings for hitaki library"
documentation = "https://docs.rs/hitaki/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "alsa", "glib"]
license = "MIT"
repository = "https://github.com/alsa-project/hitaki-rs/"
[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "hitaki"

[dependencies]
libc = "0.2"
glib = "0.20"
ffi = { package = "hitaki-sys", version = "0.5" }

[dev-dependencies]
gir-format-check = "^0.1"
