[package]
build = "build.rs"
edition = "2021"
links = "hitaki"
name = "hitaki-sys"
version = "0.6.0"
authors = ["Takashi Sakamoto"]
categories = ["external-ffi-bindings", "hardware-support", "os::linux-apis"]
description = "FFI bindings for hitaki library"
documentation = "https://docs.rs/hitaki-sys/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "alsa", "glib", "ffi"]
license = "MIT"
repository = "https://github.com/alsa-project/hitaki-rs/"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[package.metadata.system-deps.hitaki]
name = "hitaki"
version = "0.2"

[lib]
name = "hitaki_sys"

[build-dependencies]
pkg-config = "0.3"
system-deps = "7.0"

[dependencies]
libc = "0.2"
glib-sys = "0.20"
gobject-sys = "0.20"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3.12"

[features]
